@@ -35,7 +35,8 @@ class ParserOptions
 	var $mUser;                      # Stored user object, just used to initialise the skin
 	var $mIsPreview;                 # Parsing the page for a "preview" operation
 	var $mIsSectionPreview;          # Parsing the page for a "preview" operation on a single section
-
+	var $mIsPrintable;                     # Parsing the printable version of the page
+	
 	function getUseTeX()                        { return $this->mUseTeX; }
 	function getUseDynamicDates()               { return $this->mUseDynamicDates; }
 	function getInterwikiMagic()                { return $this->mInterwikiMagic; }
@@ -58,7 +59,8 @@ class ParserOptions
 	function getExternalLinkTarget()            { return $this->mExternalLinkTarget; }
 	function getIsPreview()                     { return $this->mIsPreview; }
 	function getIsSectionPreview()              { return $this->mIsSectionPreview; }
-
+  function getIsPrintable()            { return $this->mIsPrintable; }
+  
 	function getSkin() {
 		if ( !isset( $this->mSkin ) ) {
 			$this->mSkin = $this->mUser->getSkin();
@@ -105,7 +107,8 @@ class ParserOptions
 	function setExternalLinkTarget( $x )        { return wfSetVar( $this->mExternalLinkTarget, $x ); }
 	function setIsPreview( $x )                 { return wfSetVar( $this->mIsPreview, $x ); }
 	function setIsSectionPreview( $x )          { return wfSetVar( $this->mIsSectionPreview, $x ); }
-
+  function setIsPrintable( $x )        { return wfSetVar( $this->mIsPrintable, $x ); }
+  
 	function __construct( $user = null ) {
 		$this->initialiseFromUser( $user );
 	}
